# MyVulkanEngine

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Cloud.cpp  Cloud.h  Data.h  README.md  Render.cpp  Render.h  main.cpp
Camera/: Camera.cpp  Camera.h
Modelbase/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  AssimpGLMHelpers.h  Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelData.h  ModelInstance.cpp  ModelInstance.h  ModelLoader.cpp  ModelLoader.h  Modelbase.h
Object/: Object.cpp  Object.h
VkGUI/: Font.cpp  Font.h  Text.cpp  Text.h
Vkbase/: Buffer.cpp  Buffer.h  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DescriptorSets.cpp  DescriptorSets.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  RenderDelegator.cpp  RenderDelegator.h  RenderPass.cpp  RenderPass.h  ResourceBase.cpp  ResourceBase.h  ResourceManager.cpp  ResourceManager.h  Sampler.cpp  Sampler.h  Swapchain.cpp  Swapchain.h  Vkbase.h  Window.cpp  Window.h
config/: model.json  render.json
include/assimp/: revision.h
include/vulkan/: vulkan_handles.hpp  vulkan_hpp_macros.hpp  vulkan_profiles.hpp
lib/: libVkLayer_khronos_profiles.dylib  libVkLayer_screenshot.dylib  libfreetype.6.20.2.dylib  libfreetype.6.dylib  libglfw.dylib  libglfw3.dylib  libvulkan.1.3.296.dylib
shader/: baseShader.frag  baseShader.vert  baseShaderFrag.spv  baseShaderVert.spv  blend.frag  blend.vert  blendFrag.spv  blur_h.frag  blur_hFrag.spv  blur_hVert.spv  blur_v.frag  blur_v.vert  blur_vFrag.spv  cloud.frag  cloudFrag.spv  cloudVert.spv  compile.sh  g_buffer.frag  g_bufferFrag.spv  inverstedHull.frag  inverstedHull.vert  inverstedHullFrag.spv  inverstedHullVert.spv  presentFrame.frag  presentFrameFrag.spv  shader.frag
shader/src/: baseShader.frag  blend.frag  blur_h.frag  blur_v.frag  cloud.comp  cloud.vert  g_buffer.frag  g_buffer.vert  inverstedHull.vert  shader.frag  shader.vert  text.frag  text.vert
share/vulkan/config/: vk_layer_settings.txt
share/vulkan/config/VK_LAYER_KHRONOS_profiles/: VP_LUNARG_desktop_baseline.json
share/vulkan/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_khronos_shader_object.json  VkLayer_khronos_synchronization2.json  VkLayer_khronos_validation.json  VkLayer_screenshot.json
src/model/: Running.fbx  无标题2.fbx
src/model/low-poly-anime-pun-chan/: Pun Chan Sketchfab.fbx
src/model/model.fbm/: Shoes.tga
src/model/nahida/: untitled.fbx
src/model/origin.fbm/: Skin.tga
src/model/source/Angel's Share Genshin Impact Diarama/: Angel's Share Genshin Impact Diarama.mtl
src/model/zhongli-from-genshin-impact/: ze+hongli.fbx
